<resources>
    <string name="app_name">AndroidEatItV2Client</string>
    <string name="your_name">Ваше Имя</string>
    <string name="your_address">Ваш Адрес</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Домой</string>
    <string name="menu_restaurant">Ресторан</string>
    <string name="menu_food_detail">Детали еды</string>
    <string name="popular_categories">Популярное</string>
    <string name="best_deals">Лучшие предложения</string>
    <string name="menu_menu">Категории</string>
    <string name="menu_food_list">Список еды</string>
    <string name="name_of_food">Название</string>
    <string name="_100">$100</string>
    <string name="description">Описание</string>
    <string name="food_name">Название еды</string>
    <string name="show_comment">Показать комментарии</string>
    <string name="text_review">Пожалуйста оставьте отзыв</string>
    <string name="name">Имя</string>
    <string name="comment">Комментарий</string>
    <string name="size">Размер</string>
    <string name="add_on">Добавки</string>
    <string name="addon_search">Поиск</string>
    <string name="example">Пример</string>
    <string name="menu_cart">Корзина</string>
    <string name="sign_out">Выход</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="total_0_0">Total: 0,0</string>
    <string name="place_order">Сделать заказ</string>
    <string name="cart">Корзина</string>
    <string name="_100_0">100.0</string>
    <string name="action_clear_cart">Очистить корзину</string>
    <string name="delivery_method">Способ доставки</string>
    <string name="home_address">Домашний адрес</string>
    <string name="another_address">Другой адрес</string>
    <string name="deliver_to_this_address">Доставить по этому адресу</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="cash_payment">Наличными</string>
    <string name="cart_payment">Картой</string>
    <string name="braintree">Оплата картой</string>
    <string name="enter_your_address">Введите адрес</string>
    <string name="enter_your_comment">Оставьте комментарий</string>
    <string name="menu_view_orders">Просмотр заказов</string>
    <string name="today_at_13_05_56_pm">Today at: 13:05:56 pm</string>
    <string name="order_number">Заказ номер:</string>
    <string name="order_comment">Комментарий к заказу:</string>
    <string name="status_placed">Статус: размещен</string>
    <string name="action_search">Поиск</string>
    <string name="update_info">Обновить информацию</string>
    <string name="ok">Ok</string>
    <string name="order_details">Детали заказа</string>
    <string name="size_medium">Размер: средний</string>
    <string name="addon_default">Добавки: Стандарт</string>
    <string name="quantity_1">Размер: 1</string>
    <string name="thai_salad_style">THAI SALAD STYLE</string>
    <string name="title_activity_tracking_order">TrackingOrderActivity</string>
    <string name="google_maps_key">AIzaSyAZ3DCYdVbTMSaFM735f3YSUnxr8Cm15_k</string>
    <string name="cancel">Отмена</string>
    <string name="shipper_name">Имя Курьера</string>
    <string name="shipper_info">Информация о курьере</string>
    <string name="call_shipper">Звонок курьеру</string>
    <string name="menu_subscribe_news">Новости</string>
    <string name="subscribe_to_news">Подписка на новости</string>
    <string name="restaurant_a">Restaurant A</string>
    <string name="_20_zagorodny_prospect_yo_sup">20 Zagorodny Prospect Yo Sup</string>
    <string name="arsshvets_gmail_com">arsshvets@gmail.com</string>
    <string name="bubblelayoutazazapaaapapapapawwaawa">BubbleLayoutazazapaaapapapapawwaawa</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="your_message">Ваше сообщение</string>
    <string name="your_phone">Ваш номер</string>
</resources>