<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@android:color/white"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:fontFamily="@font/brandon_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_address"
            android:hint="Enter your address"
            android:fontFamily="@font/brandon_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:text="@string/delivery_method"
        android:fontFamily="@font/brandon_medium"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/dialog_header_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdi_home_address"
            android:checked="true"
            android:text="@string/home_address"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_other_address"
            android:text="@string/another_address"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_ship_this_address"
            android:text="@string/deliver_to_this_address"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:text="@string/payment_method"
        android:fontFamily="@font/brandon_medium"
        android:textSize="22sp"
        android:textColor="@color/dialog_header_color"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdi_cod"
            android:checked="true"
            android:text="@string/cash_payment"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_braintree"
            android:text="@string/braintree"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>


</LinearLayout>